Errors now display the source line number and not the instruction number.